--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,10 +16,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^5.0.0
   http: ^0.13.3
+  mockito: ^5.0.9
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.0.4
 
 flutter:
 
